fix z-index for some elements

--- a/chippers/src/Layout/Header/header.css
+++ b/chippers/src/Layout/Header/header.css
@@ -15,7 +15,7 @@
     font-size: 45px;
     color: white;
     cursor: pointer;
-    z-index: 600;
+    z-index: 6000;
     position: fixed;
     right: 5vw;
     top: 1vh;
@@ -41,7 +41,7 @@
     width: 100vw;
     left: 0;
     transition: 0.5s;
-    z-index: 50;
+    z-index: 5000;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
